Fix CORS + OPTIONS handling